--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>iwuhedf</h1>
+    <div class="border">
+        <button class="cart" id="addBtn">Add to Cart</button>
+        <p id="msg"></p>
+    </div>
+    
+
+
+
+    <script src="script.js"></script>
 </body>
 </html>
