--- a/project-2/2-index.html
+++ b/project-2/2-index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project-2</title>
+    <link rel="stylesheet" href="2-style.css">
 </head>
 <body>
-    
+    <div class="box">
+        <button class="addBtn" id="addJs" >Add to Cart</button>
+        <button class="removeBtn" id="removeJs" >Remove</button>
+        <p id="msgg"></p>
+        <p id="msgg1"></p>
+    </div>
+
+    <script src="2-script.js"></script>
 </body>
 </html>
