--- a/project-2/2-index.html
+++ b/project-2/2-index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <div class="box">
+        <p id="mesg"></p>
         <button class="addBtn" id="addJs" >Add to Cart</button>
         <button class="removeBtn" id="removeJs" >Remove</button>
-        <p id="msgg"></p>
-        <p id="msgg1"></p>
     </div>
 
     <script src="2-script.js"></script>
