--- a/project-3/3-index.html
+++ b/project-3/3-index.html
@@ -9,8 +9,10 @@
 <body>
 
     <div class="img">
+        <div id="count">0</div>
         <button class="btn" id="btnJs">Like</button>
     </div>
-    
+    <script src="3-script.js"></script>
+
 </body>
 </html>
