--- a/project -4/4-index.html
+++ b/project -4/4-index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="4-style.css">
 </head>
 <body>
+   
+    <div class="colum">
+        <h1>Password Validation</h1>
+        <input class= "name" id="nameJs" placeholder="Name">
+        <br>
+        <input class="pass"id="passJs" placeholder="Password">
+        <br>
+        <button class="btn" id="btnJs" >Submit</button>
+        
+    </div>
     
+    <script src="4-script.js"></script>
 </body>
 </html>
