--- a/project-5/index.html
+++ b/project-5/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 5</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div class="condainer">
-        <h1>photo detials project</h1>
-        <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\1747843860804.avif">
-        <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\A251910_web_960.jpg">
-        <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\g90_electric-driving_range_3to2.webp">
-        <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\gallery-5-3.webp">
-        <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\L46125GL_303103154_074.avif">
-        <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\XC60_Images_2560x1440-09.avif">
-    </div>
-    
+        <div class="gallery">
+        
+        <div class="item"><img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\1747843860804.avif"></div>
+        <div class="item"><img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\A251910_web_960.jpg"></div>
+        <div class="item"><img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\g90_electric-driving_range_3to2.webp"></div>
+        <div class="item"><img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\gallery-5-3.webp"></div>
+        <div class="item"><img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\L46125GL_303103154_074.avif"></div>
+        <div class="item"><img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\XC60_Images_2560x1440-09.avif"></div>
+        </div>
 </body>
 </html>
