--- a/project-5/index.html
+++ b/project-5/index.html
@@ -9,12 +9,40 @@
 <body>
         <div class="gallery">
         
-        <div class="item"><img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\1747843860804.avif"></div>
-        <div class="item"><img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\A251910_web_960.jpg"></div>
-        <div class="item"><img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\g90_electric-driving_range_3to2.webp"></div>
-        <div class="item"><img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\gallery-5-3.webp"></div>
-        <div class="item"><img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\L46125GL_303103154_074.avif"></div>
-        <div class="item"><img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\XC60_Images_2560x1440-09.avif"></div>
+        <div class="item">
+            <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\1747843860804.avif">
+           <button>Details</button>
+        </div>
+
+
+        <div class="item">
+            <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\A251910_web_960.jpg">
+            <button>Details</button>
+        </div>
+
+
+        <div class="item">
+            <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\g90_electric-driving_range_3to2.webp">
+            <button>Details</button>
+        </div>
+
+        
+        <div class="item">
+            <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\gallery-5-3.webp">
+            <button>Details</button>
+        </div>
+
+
+        <div class="item">
+            <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\L46125GL_303103154_074.avif">
+            <button>Details</button>
+        </div>
+
+
+        <div class="item">
+            <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\XC60_Images_2560x1440-09.avif">
+            <button>Details</button>
+        </div>
         </div>
 </body>
 </html>
