--- a/project-5/index.html
+++ b/project-5/index.html
@@ -10,8 +10,8 @@
         <div class="gallery">
         
         <div class="item">
-            <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\1747843860804.avif">
-           <button>Details</button>
+           
+           <button class="testButton1"><img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\1747843860804.avif" alt="">car</button>
         </div>
 
 
@@ -22,7 +22,7 @@
 
 
         <div class="item">
-            <img src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\g90_electric-driving_range_3to2.webp">
+            <img  src="C:\Users\USER\OneDrive\Desktop\GIT PROJECTS\study-guide\project-5\img\g90_electric-driving_range_3to2.webp">
             <button>Details</button>
         </div>
 
